welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  var de1 = die1
  var de2 = die2
  if(noDoubles){
    if(de1 == 6){
      de1 = 1
    }
    else if(de2 == 6){
      de2 = 1
    }
    else{
      die1 = die1+1
    }
  }
  return(die1 + die2)
}